--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1436,7 +1436,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "7bb55a54",
+   "id": "0818dc4e",
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1461,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "78cc28c3",
+   "id": "120d6d18",
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1486,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1f310635",
+   "id": "dfd8340a",
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "894eb1eb",
+   "id": "78ae0a95",
    "metadata": {},
    "outputs": [
     {
@@ -1541,7 +1541,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "52462db8",
+   "id": "24f4c4d5",
    "metadata": {},
    "outputs": [
     {
@@ -1566,7 +1566,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "4032e923",
+   "id": "d5cba31e",
    "metadata": {},
    "outputs": [
     {
@@ -1591,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "59adc229",
+   "id": "74003bc1",
    "metadata": {},
    "outputs": [
     {
@@ -1616,7 +1616,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c6256a7f",
+   "id": "2266b246",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1630,7 +1630,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "9583caa3",
+   "id": "cf3c7575",
    "metadata": {},
    "outputs": [
     {
@@ -1664,7 +1664,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "15a2a19a",
+   "id": "c4e42bb3",
    "metadata": {},
    "outputs": [
     {
@@ -1808,7 +1808,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "a07e162a",
+   "id": "f238739f",
    "metadata": {},
    "outputs": [
     {
@@ -1952,7 +1952,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "fc3df117",
+   "id": "36caeef7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1969,7 +1969,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d38f585a",
+   "id": "2a1fcec5",
    "metadata": {},
    "outputs": [
     {
@@ -1990,7 +1990,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "9567eb73",
+   "id": "908c4ca5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2006,7 +2006,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "8fbfbd7b",
+   "id": "3f6f05cc",
    "metadata": {},
    "outputs": [
     {
@@ -2027,7 +2027,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "844f7588",
+   "id": "17fefc85",
    "metadata": {},
    "outputs": [
     {
@@ -2171,7 +2171,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "0434500d",
+   "id": "46ef87a0",
    "metadata": {},
    "outputs": [
     {
@@ -2196,7 +2196,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "2403b858",
+   "id": "3f34160b",
    "metadata": {},
    "outputs": [
     {
@@ -2221,7 +2221,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "ffd7a308",
+   "id": "d73cecdd",
    "metadata": {},
    "outputs": [
     {
@@ -2311,7 +2311,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "fad2d65e",
+   "id": "ee0123a6",
    "metadata": {},
    "outputs": [
     {
@@ -2337,7 +2337,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "2ce2548e",
+   "id": "27f73f15",
    "metadata": {},
    "outputs": [
     {
@@ -2363,7 +2363,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "3d24ee2c",
+   "id": "a4b1ebf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2383,7 +2383,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "579e24df",
+   "id": "5d0fa412",
    "metadata": {},
    "outputs": [
     {
@@ -2455,7 +2455,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "517f089b",
+   "id": "7dcf7b79",
    "metadata": {},
    "outputs": [
     {
@@ -2496,7 +2496,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "771eccac",
+   "id": "85c0aadb",
    "metadata": {},
    "outputs": [
     {
@@ -2628,7 +2628,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "81811d9f",
+   "id": "3c07885f",
    "metadata": {},
    "outputs": [
     {
@@ -2668,7 +2668,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "033b267f",
+   "id": "c24383ae",
    "metadata": {},
    "outputs": [
     {
@@ -2709,7 +2709,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "642054e2",
+   "id": "c137b78a",
    "metadata": {},
    "outputs": [
     {
@@ -2749,7 +2749,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "b78df7db",
+   "id": "ec47336b",
    "metadata": {},
    "outputs": [
     {
@@ -2790,7 +2790,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "fcdda3c2",
+   "id": "56c74be2",
    "metadata": {},
    "outputs": [
     {
@@ -2830,7 +2830,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "7de2a6d8",
+   "id": "d0a5a205",
    "metadata": {},
    "outputs": [
     {
@@ -2867,7 +2867,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "050fd85b",
+   "id": "201949fe",
    "metadata": {},
    "outputs": [
     {
@@ -3102,7 +3102,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "bee7f4b6",
+   "id": "0f584df3",
    "metadata": {},
    "outputs": [
     {
@@ -3145,7 +3145,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "99d4d0d2",
+   "id": "afddfa6c",
    "metadata": {},
    "outputs": [
     {
@@ -3182,7 +3182,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "20dde5e0",
+   "id": "9e8396dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3196,7 +3196,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "7f91b092",
+   "id": "78ce9d3b",
    "metadata": {},
    "outputs": [
     {
@@ -3435,7 +3435,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "e09c7df2",
+   "id": "170cc209",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3449,7 +3449,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "47306a86",
+   "id": "100e3e76",
    "metadata": {},
    "outputs": [
     {
@@ -3486,7 +3486,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "260d9f3a",
+   "id": "5d680967",
    "metadata": {},
    "outputs": [
     {
@@ -3523,7 +3523,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "0b23a8a7",
+   "id": "87f43e16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3537,7 +3537,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "94365a2f",
+   "id": "ecf8a07b",
    "metadata": {},
    "outputs": [
     {
@@ -3573,7 +3573,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "0895f689",
+   "id": "cfb679e1",
    "metadata": {},
    "outputs": [
     {
@@ -3609,7 +3609,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "bafee6ca",
+   "id": "92a1f9d9",
    "metadata": {},
    "outputs": [
     {
@@ -3753,7 +3753,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "83691cc5",
+   "id": "59372308",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3765,7 +3765,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "879e1151",
+   "id": "08479fdd",
    "metadata": {},
    "outputs": [
     {
@@ -3802,7 +3802,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "7dcccac1",
+   "id": "2990207e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3814,7 +3814,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "a1b03f10",
+   "id": "de46fe37",
    "metadata": {},
    "outputs": [
     {
@@ -3850,7 +3850,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "d8a30fed",
+   "id": "80874241",
    "metadata": {},
    "outputs": [
     {
@@ -4014,7 +4014,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "d9ad706a",
+   "id": "0664111a",
    "metadata": {},
    "outputs": [
     {
@@ -4164,8 +4164,300 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 96,
+   "id": "70c95099",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "      <td>93.272171</td>\n",
+       "      <td>97.308869</td>\n",
+       "      <td>90.948012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.274201</td>\n",
+       "      <td>83.989488</td>\n",
+       "      <td>93.867718</td>\n",
+       "      <td>96.539641</td>\n",
+       "      <td>90.582567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
+       "      <td>83.839917</td>\n",
+       "      <td>84.044699</td>\n",
+       "      <td>94.594595</td>\n",
+       "      <td>95.945946</td>\n",
+       "      <td>90.540541</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    School Type  Total Students Total School Budget  \\\n",
+       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
+       "Thomas High School      Charter            1635       $1,043,130.00   \n",
+       "Griffin High School     Charter            1468         $917,500.00   \n",
+       "Wilson High School      Charter            2283       $1,319,574.00   \n",
+       "Pena High School        Charter             962         $585,858.00   \n",
+       "\n",
+       "                    Per Student Budget  Average Math Score  \\\n",
+       "Cabrera High School            $582.00           83.061895   \n",
+       "Thomas High School             $638.00           83.418349   \n",
+       "Griffin High School            $625.00           83.351499   \n",
+       "Wilson High School             $578.00           83.274201   \n",
+       "Pena High School               $609.00           83.839917   \n",
+       "\n",
+       "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
+       "Cabrera High School              83.975780       94.133477          97.039828   \n",
+       "Thomas High School               83.848930       93.272171          97.308869   \n",
+       "Griffin High School              83.816757       93.392371          97.138965   \n",
+       "Wilson High School               83.989488       93.867718          96.539641   \n",
+       "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "\n",
+       "                     % Overall Passing  \n",
+       "Cabrera High School          91.334769  \n",
+       "Thomas High School           90.948012  \n",
+       "Griffin High School          90.599455  \n",
+       "Wilson High School           90.582567  \n",
+       "Pena High School             90.540541  "
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "\n",
+    "top_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=False)\n",
+    "\n",
+    "top_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "03af53eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "      <td>66.366592</td>\n",
+       "      <td>80.220055</td>\n",
+       "      <td>52.988247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "      <td>65.683922</td>\n",
+       "      <td>81.316421</td>\n",
+       "      <td>53.513884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "      <td>66.752967</td>\n",
+       "      <td>80.862999</td>\n",
+       "      <td>53.527508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "      <td>66.057551</td>\n",
+       "      <td>81.222432</td>\n",
+       "      <td>53.539172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      School Type  Total Students Total School Budget  \\\n",
+       "Rodriguez High School    District            3999       $2,547,363.00   \n",
+       "Figueroa High School     District            2949       $1,884,411.00   \n",
+       "Huang High School        District            2917       $1,910,635.00   \n",
+       "Hernandez High School    District            4635       $3,022,020.00   \n",
+       "Johnson High School      District            4761       $3,094,650.00   \n",
+       "\n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "Rodriguez High School            $637.00           76.842711   \n",
+       "Figueroa High School             $639.00           76.711767   \n",
+       "Huang High School                $655.00           76.629414   \n",
+       "Hernandez High School            $652.00           77.289752   \n",
+       "Johnson High School              $650.00           77.072464   \n",
+       "\n",
+       "                       Average Reading Score  % Passing Math  \\\n",
+       "Rodriguez High School              80.744686       66.366592   \n",
+       "Figueroa High School               81.158020       65.988471   \n",
+       "Huang High School                  81.182722       65.683922   \n",
+       "Hernandez High School              80.934412       66.752967   \n",
+       "Johnson High School                80.966394       66.057551   \n",
+       "\n",
+       "                       % Passing Reading  % Overall Passing  \n",
+       "Rodriguez High School          80.220055          52.988247  \n",
+       "Figueroa High School           80.739234          53.204476  \n",
+       "Huang High School              81.316421          53.513884  \n",
+       "Hernandez High School          80.862999          53.527508  \n",
+       "Johnson High School            81.222432          53.539172  "
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "\n",
+    "bottom_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=True)\n",
+    "\n",
+    "bottom_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6c569906",
+   "id": "b66025a1",
    "metadata": {},
    "outputs": [],
    "source": []
