high-low performing schools

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1436,7 +1436,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "0818dc4e",
+   "id": "b44c3ef3",
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1461,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "120d6d18",
+   "id": "61c64e4f",
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1486,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "dfd8340a",
+   "id": "f85b52d3",
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "78ae0a95",
+   "id": "f8cc43d3",
    "metadata": {},
    "outputs": [
     {
@@ -1541,7 +1541,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "24f4c4d5",
+   "id": "3f89914e",
    "metadata": {},
    "outputs": [
     {
@@ -1566,7 +1566,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d5cba31e",
+   "id": "2922c4cf",
    "metadata": {},
    "outputs": [
     {
@@ -1591,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "74003bc1",
+   "id": "9f2cb99d",
    "metadata": {},
    "outputs": [
     {
@@ -1616,7 +1616,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "2266b246",
+   "id": "b88705c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1630,7 +1630,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "cf3c7575",
+   "id": "0cf5428f",
    "metadata": {},
    "outputs": [
     {
@@ -1664,7 +1664,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "c4e42bb3",
+   "id": "cdc53d69",
    "metadata": {},
    "outputs": [
     {
@@ -1808,7 +1808,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "f238739f",
+   "id": "d7127a19",
    "metadata": {},
    "outputs": [
     {
@@ -1952,7 +1952,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "36caeef7",
+   "id": "ecfa7312",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1969,7 +1969,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "2a1fcec5",
+   "id": "2d670f06",
    "metadata": {},
    "outputs": [
     {
@@ -1990,7 +1990,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "908c4ca5",
+   "id": "9de25388",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2006,7 +2006,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "3f6f05cc",
+   "id": "2ec5518b",
    "metadata": {},
    "outputs": [
     {
@@ -2027,7 +2027,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "17fefc85",
+   "id": "1227a877",
    "metadata": {},
    "outputs": [
     {
@@ -2171,7 +2171,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "46ef87a0",
+   "id": "8fd99f44",
    "metadata": {},
    "outputs": [
     {
@@ -2196,7 +2196,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "3f34160b",
+   "id": "5cafbba9",
    "metadata": {},
    "outputs": [
     {
@@ -2221,7 +2221,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d73cecdd",
+   "id": "ab89adc6",
    "metadata": {},
    "outputs": [
     {
@@ -2311,7 +2311,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ee0123a6",
+   "id": "cbd8e27c",
    "metadata": {},
    "outputs": [
     {
@@ -2337,7 +2337,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "27f73f15",
+   "id": "5a2dad5d",
    "metadata": {},
    "outputs": [
     {
@@ -2363,7 +2363,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "a4b1ebf4",
+   "id": "19edf3ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2383,7 +2383,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "5d0fa412",
+   "id": "c02ab048",
    "metadata": {},
    "outputs": [
     {
@@ -2455,7 +2455,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "7dcf7b79",
+   "id": "de40775b",
    "metadata": {},
    "outputs": [
     {
@@ -2496,7 +2496,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "85c0aadb",
+   "id": "7fad5b44",
    "metadata": {},
    "outputs": [
     {
@@ -2628,7 +2628,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "3c07885f",
+   "id": "a0121a82",
    "metadata": {},
    "outputs": [
     {
@@ -2668,7 +2668,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "c24383ae",
+   "id": "1beb2006",
    "metadata": {},
    "outputs": [
     {
@@ -2709,7 +2709,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "c137b78a",
+   "id": "479ab5c0",
    "metadata": {},
    "outputs": [
     {
@@ -2749,7 +2749,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "ec47336b",
+   "id": "3aa91d65",
    "metadata": {},
    "outputs": [
     {
@@ -2790,7 +2790,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "56c74be2",
+   "id": "28ef2c7a",
    "metadata": {},
    "outputs": [
     {
@@ -2830,7 +2830,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "d0a5a205",
+   "id": "99f116e0",
    "metadata": {},
    "outputs": [
     {
@@ -2867,7 +2867,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "201949fe",
+   "id": "30b44584",
    "metadata": {},
    "outputs": [
     {
@@ -3102,7 +3102,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "0f584df3",
+   "id": "17016c9a",
    "metadata": {},
    "outputs": [
     {
@@ -3145,7 +3145,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "afddfa6c",
+   "id": "89f496a0",
    "metadata": {},
    "outputs": [
     {
@@ -3182,7 +3182,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "9e8396dd",
+   "id": "38e3ee66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3196,7 +3196,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "78ce9d3b",
+   "id": "b09df431",
    "metadata": {},
    "outputs": [
     {
@@ -3435,7 +3435,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "170cc209",
+   "id": "d6e7d608",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3449,7 +3449,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "100e3e76",
+   "id": "76a70ec4",
    "metadata": {},
    "outputs": [
     {
@@ -3486,7 +3486,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "5d680967",
+   "id": "903b9fcf",
    "metadata": {},
    "outputs": [
     {
@@ -3523,7 +3523,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "87f43e16",
+   "id": "679f439e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3537,7 +3537,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "ecf8a07b",
+   "id": "ce9ccebb",
    "metadata": {},
    "outputs": [
     {
@@ -3573,7 +3573,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "cfb679e1",
+   "id": "487c4018",
    "metadata": {},
    "outputs": [
     {
@@ -3609,7 +3609,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "92a1f9d9",
+   "id": "d7ae2ba9",
    "metadata": {},
    "outputs": [
     {
@@ -3753,7 +3753,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "59372308",
+   "id": "b7ed8f1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3765,7 +3765,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "08479fdd",
+   "id": "8701994e",
    "metadata": {},
    "outputs": [
     {
@@ -3802,7 +3802,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "2990207e",
+   "id": "0e9ed200",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3814,7 +3814,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "de46fe37",
+   "id": "cb8f9eca",
    "metadata": {},
    "outputs": [
     {
@@ -3850,7 +3850,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "80874241",
+   "id": "fcef4e64",
    "metadata": {},
    "outputs": [
     {
@@ -4014,7 +4014,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "0664111a",
+   "id": "9aa00e97",
    "metadata": {},
    "outputs": [
     {
@@ -4165,7 +4165,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "70c95099",
+   "id": "2ef115d3",
    "metadata": {},
    "outputs": [
     {
@@ -4311,7 +4311,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "03af53eb",
+   "id": "ee8fa2f9",
    "metadata": {},
    "outputs": [
     {
@@ -4456,8 +4456,139 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 98,
+   "id": "d7a07fba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Cat:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "0e7bd106",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felix\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_cat = Cat('Felix')\n",
+    "print(first_cat.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "8c1681a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Garfield\n"
+     ]
+    }
+   ],
+   "source": [
+    "second_cat = Cat('Garfield')\n",
+    "print(second_cat.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "65da0b57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog:\n",
+    "    def __init__(self, name, color, sound):\n",
+    "        self.name = name\n",
+    "        self.color = color\n",
+    "        self.sound = sound\n",
+    "\n",
+    "    def bark(self):\n",
+    "        return self.sound + ' ' + self.sound"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "e349f221",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fido\n",
+      "brown\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'woof! woof!'"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_dog = Dog('Fido', 'brown', 'woof!')\n",
+    "print(first_dog.name)\n",
+    "print(first_dog.color)\n",
+    "first_dog.bark()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "67558f57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lady\n",
+      "blonde\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'arf! arf!'"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "second_dog = Dog('Lady', 'blonde', 'arf!')\n",
+    "print(second_dog.name)\n",
+    "print(second_dog.color)\n",
+    "second_dog.bark()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b66025a1",
+   "id": "4e7101e3",
    "metadata": {},
    "outputs": [],
    "source": []
