--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "      <td>9th</td>\n",
        "      <td>Huang High School</td>\n",
        "      <td>66.0</td>\n",
-       "      <td>79.0</td>\n",
+       "      <td>79</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -284,7 +284,7 @@
        "      <td>12th</td>\n",
        "      <td>Huang High School</td>\n",
        "      <td>94.0</td>\n",
-       "      <td>61.0</td>\n",
+       "      <td>61</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -294,7 +294,7 @@
        "      <td>12th</td>\n",
        "      <td>Huang High School</td>\n",
        "      <td>90.0</td>\n",
-       "      <td>60.0</td>\n",
+       "      <td>60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -304,7 +304,7 @@
        "      <td>12th</td>\n",
        "      <td>Huang High School</td>\n",
        "      <td>67.0</td>\n",
-       "      <td>58.0</td>\n",
+       "      <td>58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -314,7 +314,7 @@
        "      <td>9th</td>\n",
        "      <td>Huang High School</td>\n",
        "      <td>97.0</td>\n",
-       "      <td>84.0</td>\n",
+       "      <td>84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -334,7 +334,7 @@
        "      <td>12th</td>\n",
        "      <td>Thomas High School</td>\n",
        "      <td>99.0</td>\n",
-       "      <td>90.0</td>\n",
+       "      <td>90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39166</th>\n",
@@ -344,7 +344,7 @@
        "      <td>10th</td>\n",
        "      <td>Thomas High School</td>\n",
        "      <td>95.0</td>\n",
-       "      <td>70.0</td>\n",
+       "      <td>70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39167</th>\n",
@@ -354,7 +354,7 @@
        "      <td>9th</td>\n",
        "      <td>Thomas High School</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39168</th>\n",
@@ -364,7 +364,7 @@
        "      <td>10th</td>\n",
        "      <td>Thomas High School</td>\n",
        "      <td>99.0</td>\n",
-       "      <td>90.0</td>\n",
+       "      <td>90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39169</th>\n",
@@ -374,7 +374,7 @@
        "      <td>11th</td>\n",
        "      <td>Thomas High School</td>\n",
        "      <td>95.0</td>\n",
-       "      <td>75.0</td>\n",
+       "      <td>75</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -396,22 +396,22 @@
        "39169       39169  Carolyn Jackson      F  11th  Thomas High School   \n",
        "\n",
        "       reading_score  math_score  \n",
-       "0               66.0        79.0  \n",
-       "1               94.0        61.0  \n",
-       "2               90.0        60.0  \n",
-       "3               67.0        58.0  \n",
-       "4               97.0        84.0  \n",
+       "0               66.0          79  \n",
+       "1               94.0          61  \n",
+       "2               90.0          60  \n",
+       "3               67.0          58  \n",
+       "4               97.0          84  \n",
        "...              ...         ...  \n",
-       "39165           99.0        90.0  \n",
-       "39166           95.0        70.0  \n",
-       "39167            NaN         NaN  \n",
-       "39168           99.0        90.0  \n",
-       "39169           95.0        75.0  \n",
+       "39165           99.0          90  \n",
+       "39166           95.0          70  \n",
+       "39167            NaN          84  \n",
+       "39168           99.0          90  \n",
+       "39169           95.0          75  \n",
        "\n",
        "[39170 rows x 7 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
        "[39170 rows x 7 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,15 +989,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "38709\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 1. Get the number of students that are in ninth grade at Thomas High School.\n",
     "# These students have no grades. \n",
@@ -1012,59 +1004,33 @@
     "# Step 2. Subtract the number of students that are in ninth grade at \n",
     "# Thomas High School from the total student count to get the new total student count.\n",
     "\n",
-    "new_total_student_count = student_count - thomas_high_niners\n",
-    "\n",
-    "print(new_total_student_count)"
+    "new_total_student_count = student_count - thomas_high_niners\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "28939\n",
-      "33158\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate the passing rates using the \"clean_student_data\".\n",
     "\n",
     "passing_math_count = school_data_complete_df[(school_data_complete_df[\"math_score\"] >= 70)].count()[\"student_name\"]\n",
     "\n",
-    "passing_reading_count = school_data_complete_df[(school_data_complete_df[\"reading_score\"] >= 70)].count()[\"student_name\"]\n",
-    "\n",
-    "print(passing_math_count)\n",
-    "print(passing_reading_count)"
+    "passing_reading_count = school_data_complete_df[(school_data_complete_df[\"reading_score\"] >= 70)].count()[\"student_name\"]\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "74.76039164018704\n",
-      "85.6596657108166\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 3. Calculate the passing percentages with the new total student count.\n",
     "\n",
     "passing_math_percentage = passing_math_count / (new_total_student_count) *100\n",
     "\n",
-    "passing_reading_percentage = passing_reading_count / (new_total_student_count) *100\n",
-    "\n",
-    "print(passing_math_percentage)\n",
-    "print(passing_reading_percentage)"
+    "passing_reading_percentage = passing_reading_count / (new_total_student_count) *100\n"
    ]
   },
   {
@@ -2368,97 +2334,97 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Cabrera High School</th>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1858</td>\n",
-       "      <td>$1,081,356.00</td>\n",
-       "      <td>$582.00</td>\n",
-       "      <td>83.061895</td>\n",
-       "      <td>83.975780</td>\n",
-       "      <td>94.133477</td>\n",
-       "      <td>97.039828</td>\n",
-       "      <td>91.334769</td>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "      <td>66.366592</td>\n",
+       "      <td>80.220055</td>\n",
+       "      <td>52.988247</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Thomas High School</th>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1635</td>\n",
-       "      <td>$1,043,130.00</td>\n",
-       "      <td>$638.00</td>\n",
-       "      <td>83.350937</td>\n",
-       "      <td>83.896082</td>\n",
-       "      <td>93.185690</td>\n",
-       "      <td>97.018739</td>\n",
-       "      <td>90.630324</td>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Griffin High School</th>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1468</td>\n",
-       "      <td>$917,500.00</td>\n",
-       "      <td>$625.00</td>\n",
-       "      <td>83.351499</td>\n",
-       "      <td>83.816757</td>\n",
-       "      <td>93.392371</td>\n",
-       "      <td>97.138965</td>\n",
-       "      <td>90.599455</td>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "      <td>65.683922</td>\n",
+       "      <td>81.316421</td>\n",
+       "      <td>53.513884</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Wilson High School</th>\n",
-       "      <td>Charter</td>\n",
-       "      <td>2283</td>\n",
-       "      <td>$1,319,574.00</td>\n",
-       "      <td>$578.00</td>\n",
-       "      <td>83.274201</td>\n",
-       "      <td>83.989488</td>\n",
-       "      <td>93.867718</td>\n",
-       "      <td>96.539641</td>\n",
-       "      <td>90.582567</td>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "      <td>66.752967</td>\n",
+       "      <td>80.862999</td>\n",
+       "      <td>53.527508</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Pena High School</th>\n",
-       "      <td>Charter</td>\n",
-       "      <td>962</td>\n",
-       "      <td>$585,858.00</td>\n",
-       "      <td>$609.00</td>\n",
-       "      <td>83.839917</td>\n",
-       "      <td>84.044699</td>\n",
-       "      <td>94.594595</td>\n",
-       "      <td>95.945946</td>\n",
-       "      <td>90.540541</td>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "      <td>66.057551</td>\n",
+       "      <td>81.222432</td>\n",
+       "      <td>53.539172</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    School Type  Total Students Total School Budget  \\\n",
-       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
-       "Thomas High School      Charter            1635       $1,043,130.00   \n",
-       "Griffin High School     Charter            1468         $917,500.00   \n",
-       "Wilson High School      Charter            2283       $1,319,574.00   \n",
-       "Pena High School        Charter             962         $585,858.00   \n",
+       "                      School Type  Total Students Total School Budget  \\\n",
+       "Rodriguez High School    District            3999       $2,547,363.00   \n",
+       "Figueroa High School     District            2949       $1,884,411.00   \n",
+       "Huang High School        District            2917       $1,910,635.00   \n",
+       "Hernandez High School    District            4635       $3,022,020.00   \n",
+       "Johnson High School      District            4761       $3,094,650.00   \n",
        "\n",
-       "                    Per Student Budget  Average Math Score  \\\n",
-       "Cabrera High School            $582.00           83.061895   \n",
-       "Thomas High School             $638.00           83.350937   \n",
-       "Griffin High School            $625.00           83.351499   \n",
-       "Wilson High School             $578.00           83.274201   \n",
-       "Pena High School               $609.00           83.839917   \n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "Rodriguez High School            $637.00           76.842711   \n",
+       "Figueroa High School             $639.00           76.711767   \n",
+       "Huang High School                $655.00           76.629414   \n",
+       "Hernandez High School            $652.00           77.289752   \n",
+       "Johnson High School              $650.00           77.072464   \n",
        "\n",
-       "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
-       "Cabrera High School              83.975780       94.133477          97.039828   \n",
-       "Thomas High School               83.896082       93.185690          97.018739   \n",
-       "Griffin High School              83.816757       93.392371          97.138965   \n",
-       "Wilson High School               83.989488       93.867718          96.539641   \n",
-       "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "                       Average Reading Score  % Passing Math  \\\n",
+       "Rodriguez High School              80.744686       66.366592   \n",
+       "Figueroa High School               81.158020       65.988471   \n",
+       "Huang High School                  81.182722       65.683922   \n",
+       "Hernandez High School              80.934412       66.752967   \n",
+       "Johnson High School                80.966394       66.057551   \n",
        "\n",
-       "                     % Overall Passing  \n",
-       "Cabrera High School          91.334769  \n",
-       "Thomas High School           90.630324  \n",
-       "Griffin High School          90.599455  \n",
-       "Wilson High School           90.582567  \n",
-       "Pena High School             90.540541  "
+       "                       % Passing Reading  % Overall Passing  \n",
+       "Rodriguez High School          80.220055          52.988247  \n",
+       "Figueroa High School           80.739234          53.204476  \n",
+       "Huang High School              81.316421          53.513884  \n",
+       "Hernandez High School          80.862999          53.527508  \n",
+       "Johnson High School            81.222432          53.539172  "
       ]
      },
      "execution_count": 29,
@@ -2469,7 +2435,7 @@
    "source": [
     "# Sort and show top five schools.\n",
     "\n",
-    "bottom_5_schools_df = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending = False)\n",
+    "bottom_5_schools_df = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending = True)\n",
     "\n",
     "bottom_5_schools_df.head(5)\n"
    ]
